[WIP] SSR with Askama

--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -4,10 +4,10 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, user-scalable=no"/>
     <meta name="theme-color" content="#1a1a1a"/>
-		<link rel="icon" sizes="128x128" id="favicon" href="%PUBLIC_URL%/static/logoWhite128.png" type="image/png"/>
-		<link rel="icon" sizes="512x512" id="textFavicon" href="%PUBLIC_URL%/static/logoWhite512.png" type="image/png"/>
+    <link rel="icon" sizes="128x128" id="favicon" href="%PUBLIC_URL%/static/logoWhite128.png" type="image/png"/>
+    <link rel="icon" sizes="512x512" id="textFavicon" href="%PUBLIC_URL%/static/textLogoWhite512.png" type="image/png"/>
     <link rel="manifest" href="%PUBLIC_URL%/static/manifest.json"/>
-		<title>Dim - Fueled By Dark Forces</title>
+    <title>Dim - Fueled By Dark Forces</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run Dim.</noscript>
